--- a/client/main.html
+++ b/client/main.html
@@ -8,22 +8,17 @@
   <meta name="keywords" content="potluck, event, planning, social, collaborative" />
   <meta name="title" content="Potluck Potluck - The luckiest way to plan events" />
   <meta name="author" content="Michelle and Cole" />
-  <!-- <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-    crossorigin="anonymous"
-  /> -->
+
 <!-- Bootstrap Core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" type="text/css">
+  <link href="vendor/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
-  <link href="vendor/fontawesome-free/css/all.min.css" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" type="text/css">
-  <link href="vendor/simple-line-icons/css/simple-line-icons.css" type="text/css">
+  <link href="vendor/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet">
+  <link href="vendor/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="css/stylish-portfolio.min.css" type="text/css">
+  <link href="vendor/css/stylish-portfolio.css" rel="stylesheet">
 
 </head>
 
@@ -33,8 +28,8 @@
   </div>
 
   <!-- Bootstrap core JavaScript -->
-  <link href="vendor/jquery/jquery.min.js" />
-  <link href="vendor/bootstrap/js/bootstrap.bundle.min.js" />
+  <link href="vendor/vendor/jquery/jquery.min.js" />
+  <link href="vendor/vendor/bootstrap/js/bootstrap.bundle.min.js" />
 
   <!-- Plugin JavaScript -->
   <link href="vendor/jquery-easing/jquery.easing.min.js" />
